20_platform/monitoring/grafana_route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: monitoring
  labels:
    app.kubernetes.io/name: grafana
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: ingress
      namespace: ingress
      sectionName: https
  hostnames:
    - "grafana.${vals_info_cluster_domain}"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      timeouts:
        request: 10m
      backendRefs:
        - group: ""
          kind: Service
          name: grafana
          port: 80
